how to do templating example and sessions prelims added

--- a/Layers/presentation_layer/template/login.html
+++ b/Layers/presentation_layer/template/login.html
@@ -1,14 +1,11 @@
-<html>
-<head>
-	<title>login</title>
-	<script src="../js/alert.js"></script>
-</head>
-<body>
-<p>{{.}}</p>
+{{define "jsImports"}}
+<script src="../js/alert.js"></script>
+{{end}}
+
+{{define "loginForm"}}
 <form action="/login" method="post">
     Username:<input type="text" name="username">
     Password:<input type="password" name="password">
     <input type="submit" value="Login">
 </form>
-</body>
-</html>
+{{end}}
