This currently compiles and runs

--- a/Layers/presentation_layer/template/login.html
+++ b/Layers/presentation_layer/template/login.html
@@ -4,7 +4,7 @@
 
 {{define "loginForm"}}
 <form action="/login" method="post">
-    User Id:<input type="text" name="username">
+    User Id:<input type="text" name="id">
     Password:<input type="password" name="password">
     <input type="submit" value="Login">
 </form>
