--- a/Layers/presentation_layer/template/base.html
+++ b/Layers/presentation_layer/template/base.html
@@ -3,7 +3,7 @@
 <html>
 <head> <title> Site Name</title>{{template "jsImports"}}</head>
 <body>
-	{{template "loginForm"}}
+	Test
 </body>
 </html>
 {{end}}
