Remove alert.js

--- a/Layers/presentation_layer/template/base.html
+++ b/Layers/presentation_layer/template/base.html
@@ -1,7 +1,7 @@
 {{define "base"}}
 <!DOCTYPE html>
 <html>
-<head> <title> Site Name</title>{{template "jsImports"}}</head>
+<head> <title> Site Name</title></head>
 <body>
 	{{template "loginForm"}}
 </body>
