--- a/Layers/presentation_layer/template/app.html
+++ b/Layers/presentation_layer/template/app.html
@@ -2,7 +2,7 @@
     <link rel="stylesheet" 
     href="../js/jq/jqwidgets/styles/jqx.base.css" type="text/css" />
     <link rel="stylesheet" 
-    href="../js/jq/jqwidgets/styles/jqx.darkblue.css" type="text/css" />
+    href="../js/jq/jqwidgets/styles/jqx.metrodark.css" type="text/css" />
     <script type="text/javascript" src="../js/jq/scripts/jquery-1.11.1.min.js"></script>
     <script type="text/javascript" src="../js/jq/jqwidgets/jqxcore.js"></script>
     <script type="text/javascript" src="../js/jq/jqwidgets/jqxbuttons.js"></script>
@@ -23,6 +23,7 @@
     <script type="text/javascript" src="../js/jq/jqwidgets/jqxradiobutton.js"></script>
     <script type="text/javascript" src="../js/jq/jqwidgets/jqxinput.js"></script>
     <script type="text/javascript" src="../js/jq/jqwidgets/globalization/globalize.js"></script>
+    <script type="text/javascript" src="../js/app.js"></script>
 {{end}}
 
 {{define "app"}}
