--- a/Layers/presentation_layer/template/app.html
+++ b/Layers/presentation_layer/template/app.html
@@ -2,7 +2,7 @@
     <link rel="stylesheet" 
     href="../js/jq/jqwidgets/styles/jqx.base.css" type="text/css" />
     <link rel="stylesheet" 
-    href="../js/jq/jqwidgets/styles/jqx.metrodark.css" type="text/css" />
+    href="../js/jq/jqwidgets/styles/jqx.metrodark.css" type="text/css" /> 
     <script type="text/javascript" src="../js/jq/scripts/jquery-1.11.1.min.js"></script>
     <script type="text/javascript" src="../js/jq/jqwidgets/jqxcore.js"></script>
     <script type="text/javascript" src="../js/jq/jqwidgets/jqxbuttons.js"></script>
@@ -25,7 +25,6 @@
     <script type="text/javascript" src="../js/jq/jqwidgets/globalization/globalize.js"></script>
     <script type="text/javascript" src="../js/app.js"></script>
 {{end}}
-
 {{define "app"}}
 <!DOCTYPE html>
 <html>
@@ -34,9 +33,24 @@
     {{template "jqImports"}}
 </head>
 <body>
-    {{template "menu"}}
-    {{template "roomScheduler"}}
-    {{template "footer"}}
+<div class="header">
+   <div class="container">	   
+   		<div class="nav">	
+		    <button>Room 1</button>
+		    <button>Room 2</button>
+		    <button>Room 3</button>
+		    <button>Room 4</button>
+		    <button>Room 5</button>
+   		</div>	   
+	</div>
+</div>
+<div class="container">
+	<div class="content">
+		{{template "menu"}}
+	    {{template "roomScheduler"}}
+	    {{template "footer"}}
+	</div>
+</div>
 </body>
 </html>
 {{end}}
