styled the nagivation bar of main menu

--- a/Layers/presentation_layer/template/app.html
+++ b/Layers/presentation_layer/template/app.html
@@ -2,7 +2,9 @@
     <link rel="stylesheet" 
     href="../js/jq/jqwidgets/styles/jqx.base.css" type="text/css" />
     <link rel="stylesheet" 
-    href="../js/jq/jqwidgets/styles/jqx.metrodark.css" type="text/css" /> 
+    href="../js/jq/jqwidgets/styles/jqx.metrodark.css" type="text/css" />
+    <link rel="stylesheet" 
+    href="../js/jq/jqwidgets/styles/tabs.css" type="text/css" />  
     <script type="text/javascript" src="../js/jq/scripts/jquery-1.11.1.min.js"></script>
     <script type="text/javascript" src="../js/jq/jqwidgets/jqxcore.js"></script>
     <script type="text/javascript" src="../js/jq/jqwidgets/jqxbuttons.js"></script>
