--- a/Layers/presentation_layer/template/app.html
+++ b/Layers/presentation_layer/template/app.html
@@ -1,58 +1,58 @@
 {{define "jqImports"}}
-    <link rel="stylesheet" 
-    href="../js/jq/jqwidgets/styles/jqx.base.css" type="text/css" />
-    <link rel="stylesheet" 
-    href="../js/jq/jqwidgets/styles/jqx.metrodark.css" type="text/css" />
-    <link rel="stylesheet" 
-    href="../js/jq/jqwidgets/styles/tabs.css" type="text/css" />  
-    <script type="text/javascript" src="../js/jq/scripts/jquery-1.11.1.min.js"></script>
-    <script type="text/javascript" src="../js/jq/jqwidgets/jqxcore.js"></script>
-    <script type="text/javascript" src="../js/jq/jqwidgets/jqxbuttons.js"></script>
-    <script type="text/javascript" src="../js/jq/jqwidgets/jqxscrollbar.js"></script>
-    <script type="text/javascript" src="../js/jq/jqwidgets/jqxdata.js"></script>
-    <script type="text/javascript" src="../js/jq/jqwidgets/jqxdate.js"></script>
-    <script type="text/javascript" src="../js/jq/jqwidgets/jqxscheduler.js"></script>
-    <script type="text/javascript" src="../js/jq/jqwidgets/jqxscheduler.api.js"></script>
-    <script type="text/javascript" src="../js/jq/jqwidgets/jqxdatetimeinput.js"></script>
-    <script type="text/javascript" src="../js/jq/jqwidgets/jqxmenu.js"></script>
-    <script type="text/javascript" src="../js/jq/jqwidgets/jqxcalendar.js"></script>
-    <script type="text/javascript" src="../js/jq/jqwidgets/jqxtooltip.js"></script>
-    <script type="text/javascript" src="../js/jq/jqwidgets/jqxwindow.js"></script>
-    <script type="text/javascript" src="../js/jq/jqwidgets/jqxcheckbox.js"></script>
-    <script type="text/javascript" src="../js/jq/jqwidgets/jqxlistbox.js"></script>
-    <script type="text/javascript" src="../js/jq/jqwidgets/jqxdropdownlist.js"></script>
-    <script type="text/javascript" src="../js/jq/jqwidgets/jqxnumberinput.js"></script>
-    <script type="text/javascript" src="../js/jq/jqwidgets/jqxradiobutton.js"></script>
-    <script type="text/javascript" src="../js/jq/jqwidgets/jqxinput.js"></script>
-    <script type="text/javascript" src="../js/jq/jqwidgets/globalization/globalize.js"></script>
-    <script type="text/javascript" src="../js/app.js"></script>
-{{end}}
+<link rel="stylesheet" href="../js/jq/jqwidgets/styles/jqx.base.css" type="text/css" />
+<link rel="stylesheet" href="../js/jq/jqwidgets/styles/jqx.metrodark.css" type="text/css" />
+<link rel="stylesheet" href="../js/jq/jqwidgets/styles/tabs.css" type="text/css" />
+<script type="text/javascript" src="../js/jq/scripts/jquery-1.11.1.min.js"></script>
+<script type="text/javascript" src="../js/jq/jqwidgets/jqxcore.js"></script>
+<script type="text/javascript" src="../js/jq/jqwidgets/jqxbuttons.js"></script>
+<script type="text/javascript" src="../js/jq/jqwidgets/jqxscrollbar.js"></script>
+<script type="text/javascript" src="../js/jq/jqwidgets/jqxdata.js"></script>
+<script type="text/javascript" src="../js/jq/jqwidgets/jqxdate.js"></script>
+<script type="text/javascript" src="../js/jq/jqwidgets/jqxscheduler.js"></script>
+<script type="text/javascript" src="../js/jq/jqwidgets/jqxscheduler.api.js"></script>
+<script type="text/javascript" src="../js/jq/jqwidgets/jqxdatetimeinput.js"></script>
+<script type="text/javascript" src="../js/jq/jqwidgets/jqxmenu.js"></script>
+<script type="text/javascript" src="../js/jq/jqwidgets/jqxcalendar.js"></script>
+<script type="text/javascript" src="../js/jq/jqwidgets/jqxtooltip.js"></script>
+<script type="text/javascript" src="../js/jq/jqwidgets/jqxwindow.js"></script>
+<script type="text/javascript" src="../js/jq/jqwidgets/jqxcheckbox.js"></script>
+<script type="text/javascript" src="../js/jq/jqwidgets/jqxlistbox.js"></script>
+<script type="text/javascript" src="../js/jq/jqwidgets/jqxdropdownlist.js"></script>
+<script type="text/javascript" src="../js/jq/jqwidgets/jqxnumberinput.js"></script>
+<script type="text/javascript" src="../js/jq/jqwidgets/jqxradiobutton.js"></script>
+<script type="text/javascript" src="../js/jq/jqwidgets/jqxinput.js"></script>
+<script type="text/javascript" src="../js/jq/jqwidgets/globalization/globalize.js"></script>
+<script type="text/javascript" src="../js/app.js"></script> 
+{{end}} 
 {{define "app"}}
 <!DOCTYPE html>
 <html>
-<head> 
+
+<head>
     <title> Site Name </title>
     {{template "jqImports"}}
 </head>
+
 <body>
-<div class="header">
-   <div class="container">	   
-   		<div class="nav">	
-		    <button>Room 1</button>
-		    <button>Room 2</button>
-		    <button>Room 3</button>
-		    <button>Room 4</button>
-		    <button>Room 5</button>
-   		</div>	   
-	</div>
-</div>
-<div class="container">
-	<div class="content">
-		{{template "menu"}}
-	    {{template "roomScheduler"}}
-	    {{template "footer"}}
-	</div>
-</div>
+    <div class="header">
+        <div class="container">
+            <div class="nav">
+                <button>Room 1</button>
+                <button>Room 2</button>
+                <button>Room 3</button>
+                <button>Room 4</button>
+                <button>Room 5</button>
+            </div>
+        </div>
+    </div>
+    <div class="container">
+        <div class="content">
+            {{template "menu"}} 
+            {{template "roomScheduler"}} 
+            {{template "footer"}}
+        </div>
+    </div>
 </body>
+
 </html>
 {{end}}
