prevented appointment creation from within the calendar view

--- a/Layers/presentation_layer/template/app.html
+++ b/Layers/presentation_layer/template/app.html
@@ -37,11 +37,11 @@
     <div class="header">
         <div class="container">
             <div class="nav">
-                <button onclick="updateCalendar(1)">Room 1</button>
-                <button onclick="updateCalendar(2)">Room 2</button>
-                <button onclick="updateCalendar(3)">Room 3</button>
-                <button onclick="updateCalendar(4)">Room 4</button>
-                <button onclick="updateCalendar(5)">Room 5</button>
+                <button onclick="buildCalendar(1)">Room 1</button>
+                <button onclick="buildCalendar(2)">Room 2</button>
+                <button onclick="buildCalendar(3)">Room 3</button>
+                <button onclick="buildCalendar(4)">Room 4</button>
+                <button onclick="buildCalendar(5)">Room 5</button>
             </div>
         </div>
     </div>
