filled the current reservations table

--- a/Layers/presentation_layer/template/currentReservations.html
+++ b/Layers/presentation_layer/template/currentReservations.html
@@ -1,2 +1,25 @@
 {{define "currentReservations"}}
+<h1>Your current reservations</h1>
+<table border="1px">
+	<th>
+		Room Number
+	</th>
+	<th>
+		Date
+	</th>
+	<th>
+		Start Time
+	</th>
+	<th>
+		End Time
+	</th>
+	<tr>
+		<td>Test room</td>
+		<td>Some date</td>
+		<td>Start</td>
+		<td>End</td>
+		<td><button>Modify Reservation</button></td>
+		<td><button>Delete reservation</button></td>
+	</tr>
+</table>
 {{end}}
