--- a/Layers/presentation_layer/template/currentReservations.html
+++ b/Layers/presentation_layer/template/currentReservations.html
@@ -1,6 +1,6 @@
 {{define "currentReservations"}}
 <h1>Your current reservations</h1>
-<table border="1px">
+<table border="1" cellpadding="0" cellspacing="0" >
 	<th>
 		Room Number
 	</th>
