--- a/Layers/presentation_layer/template/app.html
+++ b/Layers/presentation_layer/template/app.html
@@ -1,7 +1,9 @@
 {{define "jqImports"}}
 <link rel="stylesheet" href="../js/jq/jqwidgets/styles/jqx.base.css" type="text/css" />
 <link rel="stylesheet" href="../js/jq/jqwidgets/styles/jqx.metrodark.css" type="text/css" />
-<link rel="stylesheet" href="../js/jq/jqwidgets/styles/tabs.css" type="text/css" />
+<link rel="stylesheet" href="../css/tables.css" type="text/css" />
+<link rel="stylesheet" href="../css/tabs.css" type="text/css" />
+<link rel="stylesheet" href="../css/app.css" type="text/css" />
 <script type="text/javascript" src="../js/jq/scripts/jquery-1.11.1.min.js"></script>
 <script type="text/javascript" src="../js/jq/jqwidgets/jqxcore.js"></script>
 <script type="text/javascript" src="../js/jq/jqwidgets/jqxbuttons.js"></script>
@@ -22,6 +24,7 @@
 <script type="text/javascript" src="../js/jq/jqwidgets/jqxradiobutton.js"></script>
 <script type="text/javascript" src="../js/jq/jqwidgets/jqxinput.js"></script>
 <script type="text/javascript" src="../js/jq/jqwidgets/globalization/globalize.js"></script>
+<script type="text/javascript" src="../js/models/reservationModel.js"></script> 
 <script type="text/javascript" src="../js/app.js"></script> 
 {{end}} 
 {{define "app"}}
