Edit Reservation front-end model

--- a/Layers/presentation_layer/css/app.css
+++ b/Layers/presentation_layer/css/app.css
@@ -1,4 +1,8 @@
 /* General CSS */
 body{
   font-family: 'Helvetica Neue', Helvetica, Arial;
+  font-size: 14px;
+  line-height: 20px;
+  font-weight: 400;
+  color: #3b3b3b;
 }
