added header and cleaned up login

--- a/Layers/presentation_layer/template/app.html
+++ b/Layers/presentation_layer/template/app.html
@@ -1,7 +1,7 @@
 {{define "jqImports"}}
 <link rel="stylesheet" href="../js/jq/jqwidgets/styles/jqx.base.css" type="text/css" />
 <link rel="stylesheet" href="../js/jq/jqwidgets/styles/jqx.metrodark.css" type="text/css" />
-<link rel="stylesheet" href="../js/jq/jqwidgets/styles/tabs.css" type="text/css" />
+<link rel="stylesheet" href="../css/tabs.css" type="text/css" />
 <script type="text/javascript" src="../js/jq/scripts/jquery-1.11.1.min.js"></script>
 <script type="text/javascript" src="../js/jq/jqwidgets/jqxcore.js"></script>
 <script type="text/javascript" src="../js/jq/jqwidgets/jqxbuttons.js"></script>
@@ -35,6 +35,9 @@
 
 <body>
     <div class="header">
+        {{template "header"}}
+    </div>
+    <div class="roomTabs">
         <div class="container">
             <div class="nav">
                 <button onclick="buildCalendar(1)">Room 1</button>
