--- a/Layers/presentation_layer/template/base.html
+++ b/Layers/presentation_layer/template/base.html
@@ -3,7 +3,10 @@
 <html>
 <head> <title> Site Name</title></head>
 <body>
+
+	{{template "header"}}
 	{{template "loginForm"}}
+	
 </body>
 </html>
 {{end}}
