--- a/Layers/presentation_layer/template/app.html
+++ b/Layers/presentation_layer/template/app.html
@@ -24,7 +24,8 @@
 <script type="text/javascript" src="../js/jq/jqwidgets/jqxradiobutton.js"></script>
 <script type="text/javascript" src="../js/jq/jqwidgets/jqxinput.js"></script>
 <script type="text/javascript" src="../js/jq/jqwidgets/globalization/globalize.js"></script>
-<script type="text/javascript" src="../js/models/reservationModel.js"></script> 
+<script type="text/javascript" src="../js/models/reservationModel.js"></script>
+<script type="text/javascript" src="../js/utils.js"></script> 
 <script type="text/javascript" src="../js/app.js"></script> 
 {{end}} 
 {{define "app"}}
