--- a/Layers/presentation_layer/template/currentReservations.html
+++ b/Layers/presentation_layer/template/currentReservations.html
@@ -7,11 +7,8 @@
       <div class="cell">
         Room Number
       </div>
-	  <div class="cell">
+	    <div class="cell">
         Description
-      </div>
-      <div class="cell">
-        Date
       </div>
       <div class="cell">
         Start Time
@@ -19,23 +16,8 @@
       <div class="cell">
         End Time
       </div>
-    </div>
-
-    <div class="row">
       <div class="cell">
-        123
-      </div>
-      <div class="cell">
-        SOEN 343 Midterm Review
-      </div>
-	  <div class="cell">
-        Monday November 13
-      </div>
-      <div class="cell">
-        12:00
-      </div>
-      <div class="cell">
-        1:00
+        Actions
       </div>
     </div>
   </div>
