Corrected the calendar tab highlighting

--- a/Layers/presentation_layer/css/tabs.css
+++ b/Layers/presentation_layer/css/tabs.css
@@ -24,7 +24,7 @@ button.tab {
   border-radius: 12px 12px 0 0;
 }
 
-div:focus button, button:focus {
+button#active {
   background-color: #8DA1BF;
   outline: none;
 }
