--- a/Layers/presentation_layer/template/app.html
+++ b/Layers/presentation_layer/template/app.html
@@ -44,11 +44,11 @@
     <div class="roomTabs">
         <div class="container">
             <div class="roomTabs">
-                <button onclick="changeRoom(1)" class="tab">Room 1</button>
-                <button onclick="changeRoom(2)" class="tab">Room 2</button>
-                <button onclick="changeRoom(3)" class="tab">Room 3</button>
-                <button onclick="changeRoom(4)" class="tab">Room 4</button>
-                <button onclick="changeRoom(5)" class="tab">Room 5</button>
+                <button id="active" onclick="changeRoom(1, this)" class="tab">Room 1</button>
+                <button onclick="changeRoom(2, this)" class="tab">Room 2</button>
+                <button onclick="changeRoom(3, this)" class="tab">Room 3</button>
+                <button onclick="changeRoom(4, this)" class="tab">Room 4</button>
+                <button onclick="changeRoom(5, this)" class="tab">Room 5</button>
             </div>
         </div>
     </div>
