Add Materialize library (minified JS)

--- a/Layers/presentation_layer/template/app.html
+++ b/Layers/presentation_layer/template/app.html
@@ -4,6 +4,8 @@
 <link rel="stylesheet" href="../css/tables.css" type="text/css" />
 <link rel="stylesheet" href="../css/tabs.css" type="text/css" />
 <link rel="stylesheet" href="../css/app.css" type="text/css" />
+<link href="http://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+<link rel="stylesheet" href="../css/materialize.min.css" type="text/css" media="screen,projection"/>
 <script type="text/javascript" src="../js/jq/scripts/jquery-1.11.1.min.js"></script>
 <script type="text/javascript" src="../js/jq/jqwidgets/jqxcore.js"></script>
 <script type="text/javascript" src="../js/jq/jqwidgets/jqxbuttons.js"></script>
@@ -24,6 +26,7 @@
 <script type="text/javascript" src="../js/jq/jqwidgets/jqxradiobutton.js"></script>
 <script type="text/javascript" src="../js/jq/jqwidgets/jqxinput.js"></script>
 <script type="text/javascript" src="../js/jq/jqwidgets/globalization/globalize.js"></script>
+<script type="text/javascript" src="../js/materialize/materialize.min.js"></script>
 <script type="text/javascript" src="../js/models/reservationModel.js"></script>
 <script type="text/javascript" src="../js/utils.js"></script> 
 <script type="text/javascript" src="../js/app.js"></script> 
