--- a/Layers/presentation_layer/template/app.html
+++ b/Layers/presentation_layer/template/app.html
@@ -5,7 +5,7 @@
 <link rel="stylesheet" href="../css/tabs.css" type="text/css" />
 <link rel="stylesheet" href="../css/app.css" type="text/css" />
 <link href="http://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-<link rel="stylesheet" href="../css/materialize.min.css" type="text/css" media="screen,projection"/>
+<link rel="stylesheet" href="../css/materialize.min.css" type="text/css" media="screen,projection" />
 <script type="text/javascript" src="../js/jq/scripts/jquery-1.11.1.min.js"></script>
 <script type="text/javascript" src="../js/jq/jqwidgets/jqxcore.js"></script>
 <script type="text/javascript" src="../js/jq/jqwidgets/jqxbuttons.js"></script>
@@ -28,10 +28,8 @@
 <script type="text/javascript" src="../js/jq/jqwidgets/globalization/globalize.js"></script>
 <script type="text/javascript" src="../js/materialize/materialize.min.js"></script>
 <script type="text/javascript" src="../js/models/reservationModel.js"></script>
-<script type="text/javascript" src="../js/utils.js"></script> 
-<script type="text/javascript" src="../js/app.js"></script> 
-{{end}} 
-{{define "app"}}
+<script type="text/javascript" src="../js/utils.js"></script>
+<script type="text/javascript" src="../js/app.js"></script> {{end}} {{define "app"}}
 <!DOCTYPE html>
 <html>
 
@@ -43,6 +41,17 @@
 <body>
     <div class="header">
         {{template "header"}}
+    </div>
+    <div id="profile-bar">
+        <div class="container">
+                <div>
+                    <div class="chip">
+                        <img src="images/user.png" alt="Student"> David Dubé
+                    </div>
+                    <div id="todayDate">
+                    </div>
+                </div>
+        </div>
     </div>
     <div class="roomTabs">
         <div class="container">
@@ -57,10 +66,10 @@
     </div>
     <div class="container">
         <div class="content">
-            {{template "menu"}}
+            {{template "menu"}} 
             {{template "roomScheduler"}} 
-            {{template "currentReservations"}}
-            {{template "createReservation"}}
+            {{template "currentReservations"}} 
+            {{template "createReservation"}} 
             {{template "footer"}}
         </div>
     </div>
