--- a/Layers/presentation_layer/css/tabs.css
+++ b/Layers/presentation_layer/css/tabs.css
@@ -15,7 +15,7 @@ button.tab {
   cursor: pointer;
   width: 197px;
   display: inline-block;
-  background-color: #5E6B7F;
+  background-color: #b71c1c ; 
   color: white;
   text-align: center;
   transition: .25s ease;
@@ -25,7 +25,7 @@ button.tab {
 }
 
 button#active {
-  background-color: #8DA1BF;
+  background-color: #800000;
   outline: none;
 }
 
@@ -54,15 +54,4 @@ p {
 
 div:focus {
   outline: none;
-}
-
-#profile-bar{
-    margin: 0 auto;
-    padding: 20px;
-    max-width: 800px;
-}
-
-#todayDate{
-    float:right;
-    margin-top: 5px;
 }
