added wait list html and a time conflict function

--- a/Layers/presentation_layer/template/app.html
+++ b/Layers/presentation_layer/template/app.html
@@ -68,7 +68,8 @@
         <div class="content">
             {{template "menu"}} 
             {{template "roomScheduler"}} 
-            {{template "currentReservations"}} 
+            {{template "currentReservations"}}
+            {{template "waitList"}}
             {{template "createReservation"}} 
             {{template "footer"}}
         </div>
