--- a/Layers/presentation_layer/css/tabs.css
+++ b/Layers/presentation_layer/css/tabs.css
@@ -50,6 +50,9 @@ p {
 .roomTabs {
   display: inline-block;
   position: relative;
+  //margin: 0 auto;
+  padding: 0;
+  margin: 0;
 }
 
 div:focus {
