--- a/Layers/presentation_layer/css/app.css
+++ b/Layers/presentation_layer/css/app.css
@@ -32,6 +32,10 @@ body{
 	background-color:#800000;
 }
 
+.deleteBtn{
+	background-color:#FCC200 !important;
+}
+
 button:focus {
     outline: none;
     background-color: #800000 !important;
