--- a/Layers/presentation_layer/template/app.html
+++ b/Layers/presentation_layer/template/app.html
@@ -1,6 +1,6 @@
 {{define "jqImports"}}
 <link rel="stylesheet" href="../js/jq/jqwidgets/styles/jqx.base.css" type="text/css" />
-<link rel="stylesheet" href="../js/jq/jqwidgets/styles/jqx.metrodark.css" type="text/css" />
+<link rel="stylesheet" href="../js/jq/jqwidgets/styles/jqx.office.css" type="text/css" />
 <link rel="stylesheet" href="../css/tables.css" type="text/css" />
 <link rel="stylesheet" href="../css/tabs.css" type="text/css" />
 <link rel="stylesheet" href="../css/app.css" type="text/css" />
