--- a/Layers/presentation_layer/template/createReservation.html
+++ b/Layers/presentation_layer/template/createReservation.html
@@ -3,7 +3,7 @@
 	<div class="wrapper">
 	<h4>Create a Reservation <i class="material-icons">today</i> </h3>
 	<div class="row">
-		<form class="col s12">
+		<!--<form class="col s12">-->
 			<div class="row">
 				<div class="input-field col s6">
 					<select id="room">
@@ -56,37 +56,7 @@
 			<div class="row">
 				<div class="input-field col s6">
 					<select id="day">
-						<!--<option value="0">1</option>
-						<option value="1">2</option>
-						<option value="2">3</option>
-						<option value="3">4</option>
-						<option value="4">5</option>
-						<option value="5">6</option>
-						<option value="6">7</option>
-						<option value="7">8</option>
-						<option value="8">9</option>
-						<option value="9">10</option>
-						<option value="10">11</option>
-						<option value="11">12</option>
-						<option value="12">13</option>
-						<option value="13">14</option>
-						<option value="14">15</option>
-						<option value="15">16</option>
-						<option value="16">17</option>
-						<option value="17">18</option>
-						<option value="18">19</option>
-						<option value="19">20</option>
-						<option value="20">21</option>
-						<option value="21">22</option>
-						<option value="22">23</option>
-						<option value="23">24</option>
-						<option value="24">25</option>
-						<option value="25">26</option>
-						<option value="26">27</option>
-						<option value="27">28</option>
-						<option value="28">29</option>
-		  				<option value="29">30</option>
-		  				<option value="30">31</option>-->
+						
 		  			</select>
 					<label for="first_name">Day of reservation</label>
 				</div>
@@ -95,56 +65,25 @@
 			</div>
 			<div class="row">
 				<div id="startSelect" class="input-field col s12">
-					<!--<input id="start" type="text" class="validate">-->
-					<select id="start_time">
-						<!--<option value="8:00">8:00</option>
-						<option value="9:00">9:00</option>
-						<option value="10:00">10:00</option>
-						<option value="11:00">11:00</option>
-						<option value="12:00">12:00</option>
-						<option value="13:00">13:00</option>
-						<option value="14:00">14:00</option>
-						<option value="15:00">15:00</option>
-						<option value="16:00">16:00</option>
-						<option value="17:00">17:00</option>
-						<option value="18:00">18:00</option>
-						<option value="19:00">19:00</option>
-						<option value="20:00">20:00</option>
-						<option value="21:00">21:00</option>
-						<option value="22:00">22:00</option>-->
+
+					<select id="start_time" onchange="populateEndTime()">
+
 					</select>
 					<label for="start">Start Time</label>
 				</div>
 			</div>
 			<div class="row">
 				<div class="input-field col s12">
-					<!--<input id="end" type="text" class="validate">-->
 					<select id="end_time">
-						<option value="8:00">8:00</option>
-						<option value="9:00">9:00</option>
-						<option value="10:00">10:00</option>
-						<option value="11:00">11:00</option>
-						<option value="12:00">12:00</option>
-						<option value="13:00">13:00</option>
-						<option value="14:00">14:00</option>
-						<option value="15:00">15:00</option>
-						<option value="16:00">16:00</option>
-						<option value="17:00">17:00</option>
-						<option value="18:00">18:00</option>
-						<option value="19:00">19:00</option>
-						<option value="20:00">20:00</option>
-						<option value="21:00">21:00</option>
-						<option value="22:00">22:00</option>
 					</select>
 					<label for="end">End Time</label>
 				</div>
 			</div>
 			<div class="row">
-				<button id="createBtn" class="btn waves-effect waves-light" type="submit" onclick="createReservation()">
+				<button id="createBtn" class="btn waves-effect waves-light" onclick="createReservation()">
 					Submit
   				</button>
 			</div>
-		</form>
 	</div>
 	</div>
 </div>
