Added an error message when login credentials are incorrect

--- a/Layers/presentation_layer/template/login.html
+++ b/Layers/presentation_layer/template/login.html
@@ -49,7 +49,8 @@
 
 <form action="/login" method="post">
 	<div class="container">
-	    <a>User ID:</a><input type="text" name="id"><br/>
+		
+	    <a>User ID: </a><label style="color:red">{{.message}}</label><br/><input type="text" name="id"><br/>
 	    <a>Password:</a><input type="password" name="password"><br/>
 	    <input id="loginBtn" type="submit" value="Login">
     </div>
