--- a/Layers/presentation_layer/template/app.html
+++ b/Layers/presentation_layer/template/app.html
@@ -53,26 +53,23 @@
                 </div>
         </div>
     </div>
-    <div class="roomTabs">
-        <div class="container">
-            <div class="roomTabs">
-                <button id="active" onclick="changeRoom(1, this)" class="tab">Room 1</button>
-                <button onclick="changeRoom(2, this)" class="tab">Room 2</button>
-                <button onclick="changeRoom(3, this)" class="tab">Room 3</button>
-                <button onclick="changeRoom(4, this)" class="tab">Room 4</button>
-                <button onclick="changeRoom(5, this)" class="tab">Room 5</button>
-            </div>
-        </div>
+    <div id="roomTabs">
+        <button id="active" onclick="changeRoom(1, this)" class="tab">Room 1</button>
+        <button onclick="changeRoom(2, this)" class="tab">Room 2</button>
+        <button onclick="changeRoom(3, this)" class="tab">Room 3</button>
+        <button onclick="changeRoom(4, this)" class="tab">Room 4</button>
+        <button onclick="changeRoom(5, this)" class="tab">Room 5</button>
+
     </div>
-    <div class="container">
-        <div class="content">
-            {{template "menu"}} 
-            {{template "roomScheduler"}} 
-            {{template "currentReservations"}}
-            {{template "waitList"}}
+    <div class="content">
+        {{template "menu"}} 
+        <div class="flex-wrapper">
             {{template "createReservation"}} 
-            {{template "footer"}}
+            {{template "roomScheduler"}} 
+            {{template "waitList"}}
         </div>
+        {{template "currentReservations"}}
+        {{template "footer"}}
     </div>
 </body>
 
