--- a/Layers/presentation_layer/template/currentReservations.html
+++ b/Layers/presentation_layer/template/currentReservations.html
@@ -1,5 +1,5 @@
 {{define "currentReservations"}}
-<div class="wrapper">
+<div id="currentReservations" class="wrapper">
   <div class="reservations-table">
   </div>
 </div>
