Refactor front-end and client-side code...

--- a/Layers/presentation_layer/template/waitList.html
+++ b/Layers/presentation_layer/template/waitList.html
@@ -1,6 +1,6 @@
 {{define "waitList"}}
-<div class="wrapper">
-  <h4>Waiting List</h3>
+<div id="actionWrapperWaitlist">
+  <h4 class="actionTitle">Waiting List</h3>
   <div class="waitList-table">
   </div>
 </div>
