--- a/Layers/presentation_layer/css/app.css
+++ b/Layers/presentation_layer/css/app.css
@@ -38,6 +38,7 @@ body{
 
 #createBtn{
 	background-color:#800000;
+	margin: 10px;
 }
 
 .deleteBtn{
@@ -52,4 +53,20 @@ body{
 button:focus {
     outline: none;
     background-color: #800000 !important;
+}
+
+.actionTitle{
+	color: white;
+}
+
+#actionWrapperWaitlist{
+  padding: 0px 0px 0px 40px;
+  max-width: 800px;
+  width: 400px;
+}
+
+#actionWrapperCreate{
+  padding: 0px 40px 0px 0px;
+  max-width: 800px;
+  width: 400px;
 }
