--- a/Layers/presentation_layer/template/createReservation.html
+++ b/Layers/presentation_layer/template/createReservation.html
@@ -1,7 +1,7 @@
 {{define "createReservation"}}
 <div id="createReservationForm">
-	<div class="wrapper">
-	<h4>Create a Reservation <i class="material-icons">today</i> </h3>
+	<div id="actionWrapperCreate">
+	<h4 class="actionTitle"> Create a Reservation <i class="material-icons">today</i> </h3>
 	<div class="row">
 		<!--<form class="col s12">-->
 			<div class="row">
@@ -16,10 +16,6 @@
 					<label for="first_name">Room Number</label>
 				</div>
 				<div class="input-field col s6">
-				</div>
-			</div>
-			<div class="row">
-				<div class="input-field col s6">
 					<select id="year">
 						<option value="2016">2016</option>
 						<option value="2017">2017</option>
@@ -29,11 +25,9 @@
 		  			</select>
 					<label for="first_name">Year of reservation</label>
 				</div>
-				<div class="input-field col s6">
-				</div>
 			</div>
 			<div class="row">
-				<div class="input-field col s7">
+				<div class="input-field col s6">
 					<select id="month" onchange="updateDays()">
 						<option value="01">January</option>
 						<option value="02">February</option>
@@ -50,10 +44,6 @@
 		  			</select>
 					<label for="first_name">Month of reservation</label>
 				</div>
-				<div class="input-field col s6">
-				</div>
-			</div>			
-			<div class="row">
 				<div class="input-field col s6">
 					<select id="day">
 						
@@ -79,11 +69,9 @@
 					<label for="end">End Time</label>
 				</div>
 			</div>
-			<div class="row">
-				<button id="createBtn" class="btn waves-effect waves-light" onclick="createReservation()">
+				<button id="createBtn" class="Waves-effect waves-light btn" onclick="createReservation()">
 					Submit
   				</button>
-			</div>
 	</div>
 	</div>
 </div>
