WIP: Modify Reservations; Create modify context window;

--- a/Layers/presentation_layer/template/app.html
+++ b/Layers/presentation_layer/template/app.html
@@ -67,6 +67,7 @@
             {{template "createReservation"}} 
             {{template "roomScheduler"}} 
             {{template "waitList"}}
+            {{template "modifyModal"}}
         </div>
         {{template "currentReservations"}}
         {{template "footer"}}
