Add minor style changes

--- a/Layers/presentation_layer/template/currentReservations.html
+++ b/Layers/presentation_layer/template/currentReservations.html
@@ -1,5 +1,6 @@
 {{define "currentReservations"}}
 <div id="currentReservations" class="wrapper">
+  <h4 class="actionTitle">Current Reservations <i class="material-icons">schedule</i> </h4>
   <div class="reservations-table">
   </div>
 </div>
