--- a/Layers/presentation_layer/template/waitList.html
+++ b/Layers/presentation_layer/template/waitList.html
@@ -1,6 +1,6 @@
 {{define "waitList"}}
 <div id="actionWrapperWaitlist">
-  <h4 class="actionTitle">Waiting List</h3>
+  <h4 class="actionTitle">Waiting List <i class="material-icons">av_timer</i> </h4>
   <div class="waitList-table">
   </div>
 </div>
