--- a/Layers/presentation_layer/template/app.html
+++ b/Layers/presentation_layer/template/app.html
@@ -1,6 +1,7 @@
 {{define "jqImports"}}
 <link rel="stylesheet" href="../js/jq/jqwidgets/styles/jqx.base.css" type="text/css" />
 <link rel="stylesheet" href="../js/jq/jqwidgets/styles/jqx.office.css" type="text/css" />
+<link rel="stylesheet" href="../css/modal.css" type="text/css" />
 <link rel="stylesheet" href="../css/tables.css" type="text/css" />
 <link rel="stylesheet" href="../css/tabs.css" type="text/css" />
 <link rel="stylesheet" href="../css/app.css" type="text/css" />
@@ -28,6 +29,7 @@
 <script type="text/javascript" src="../js/jq/jqwidgets/globalization/globalize.js"></script>
 <script type="text/javascript" src="../js/materialize/materialize.min.js"></script>
 <script type="text/javascript" src="../js/models/reservationModel.js"></script>
+<script type="text/javascript" src="../js/modifyReservation.js"></script>
 <script type="text/javascript" src="../js/utils.js"></script>
 <script type="text/javascript" src="../js/app.js"></script> {{end}} {{define "app"}}
 <!DOCTYPE html>
