WIP: Modify Reservations; Fix inaccuracy with dates.

--- a/Layers/presentation_layer/template/modifyModal.html
+++ b/Layers/presentation_layer/template/modifyModal.html
@@ -70,13 +70,12 @@
 						<label for="end">End Time</label>
 					</div>
 				</div>
-				<!--<button id="createBtn" class="Waves-effect waves-light btn" onclick="createReservation()">
-					Submit
-  				</button>-->
 			</div>           
     </div>
     <div class="modal-footer">
-      <a href="#!" class=" modal-action modal-close waves-effect waves-green btn-flat">Save</a>
+        <button class="Waves-effect waves-light btn modifyBtn" onclick="modifyReservation()">
+            Save Changes
+        </button>
     </div>
   </div>
   {{end}}
