format date for current reservation

--- a/Layers/presentation_layer/template/createReservation.html
+++ b/Layers/presentation_layer/template/createReservation.html
@@ -56,16 +56,13 @@
 				<div class="row">
 					<div id="startSelect" class="input-field col s12">
 
-						<select id="start_time" onchange="populateEndTime()">
-
-					</select>
+						<select id="start_time" onchange="populateEndTime()"></select>
 						<label for="start">Start Time</label>
 					</div>
 				</div>
 				<div class="row">
 					<div class="input-field col s12">
-						<select id="end_time">
-					</select>
+						<select id="end_time"></select>
 						<label for="end">End Time</label>
 					</div>
 				</div>
