--- a/Layers/presentation_layer/template/modifyModal.html
+++ b/Layers/presentation_layer/template/modifyModal.html
@@ -5,6 +5,7 @@
 
       <div class="row">
 				<!--<form class="col s12">-->
+                <div id="modifyDataID" style="display: none;"></div>
 				<div class="row">
 					<div class="input-field col s6">
 						<select id="modifyRoom">
