bug fix and added messages to user

--- a/Layers/presentation_layer/template/createReservation.html
+++ b/Layers/presentation_layer/template/createReservation.html
@@ -69,6 +69,7 @@
 				<button id="createBtn" class="Waves-effect waves-light btn" onclick="createReservation()">
 					Submit
   				</button>
+  				<span id="message"></span>
 			</div>
 	</div>
 </div>
