logout button created

--- a/Layers/presentation_layer/template/app.html
+++ b/Layers/presentation_layer/template/app.html
@@ -48,6 +48,7 @@
         <div class="container">
                 <div>
                     <div class="chip">
+                        <button id="logout" onclick="logout()">Logout</button>
                         <img src="images/user.png" alt="Student"> David Dubé
                     </div>
                     <div id="todayDate">
